solve the deactive bug and some issuses related to redis , adding the support tickets to frontEnd